Game functionality and animations are up and running, need to add score display and sounds later

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="Styles.css">
-  <script src="App.js"></script>
+  <script src="App.js" defer></script>
 </head>
 <body>
-  <h2 class="test-div"></h2>
+  <div class="game-table">
+    <div class="game-cell"><div class="icon"></div></div>
+    <div class="game-cell"><div class="icon"></div></div>
+    <div class="game-cell"><div class="icon"></div></div>
+    <div class="game-cell"><div class="icon"></div></div>
+    <div class="game-cell"><div class="icon"></div></div>
+    <div class="game-cell"><div class="icon"></div></div>
+    <div class="game-cell"><div class="icon"></div></div>
+    <div class="game-cell"><div class="icon"></div></div>
+    <div class="game-cell"><div class="icon"></div></div>
+  </div>
 </body>
 </html>
